Unify spacing around section separators on issue details page (#43836).
Patch by Go MAEDA (user:maeda).


git-svn-id: https://svn.redmine.org/redmine/trunk@24472 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -783,6 +783,7 @@ div.issue .attribute .value {overflow:auto; text-overflow: ellipsis;}
 div.issue .attribute.string_cf .value .wiki p {margin-block: 0;}
 div.issue .attribute.text_cf .value .wiki p:first-of-type {margin-block-start: 0;}
 div.issue.overdue .due-date .value { color: var(--oc-red-9); }
+div.issue.details > hr { margin-block: 16px; }
 div#sticky-issue-header {
   display: none;
   position: fixed;
